refactor: fix code smells